src/objects/MessageQueue__c.object
<CustomObject>
    <description>Message Queue is an object that keeps track of all the information that needs to be pushed from Salesforce into other MicroStrategy systems.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsolidatedMessageId__c</fullName>
        <description>Salesforce id of the consolidated message record in message queue</description>
        <label>Consolidated Message Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_ID__c</fullName>
        <description>Track duplicate message queue id that did not get selected by integration for processing</description>
        <inlineHelpText>Track duplicate message queue id that did not get selected by integration for processing</inlineHelpText>
        <label>Duplicate ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Roll up of custom error message generated by Apex code</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>Name of object to process</description>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutgoingMessage__c</fullName>
        <description>Outbound message formatted in XML in preparation for push</description>
        <label>Outgoing Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <label>Parent ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>Object Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseMessage__c</fullName>
        <description>Capture transaction response</description>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RetryCounter__c</fullName>
        <label>Retry Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Message Queue</label>
    <listViews>
        <fullName>Create_Account_Error</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>ParentID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Create</value>
        </filters>
        <filters>
            <field>ObjectType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Create Account Error</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Create_Contact_Error</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4) AND (5 AND 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>RecordID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>ParentID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Create</value>
        </filters>
        <filters>
            <field>ObjectType__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notContain</operation>
            <value>SVC_,lbdr</value>
        </filters>
        <filters>
            <field>ParentID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ParentID__c</field>
            <operation>notEqual</operation>
            <value>0014400001ujwtDAAQ</value>
        </filters>
        <label>Create Contact Error</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Update_Error</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Update</value>
        </filters>
        <filters>
            <field>ObjectType__c</field>
            <operation>equals</operation>
            <value>Account,Contact</value>
        </filters>
        <label>Update Error</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_MQ_Today</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action__c</columns>
        <columns>ConsolidatedMessageId__c</columns>
        <columns>Duplicate_ID__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>RecordID__c</columns>
        <columns>OutgoingMessage__c</columns>
        <columns>ParentID__c</columns>
        <columns>ResponseMessage__c</columns>
        <columns>RetryCounter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>1 - MQ Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action__c</columns>
        <columns>ConsolidatedMessageId__c</columns>
        <columns>Duplicate_ID__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>RecordID__c</columns>
        <columns>OutgoingMessage__c</columns>
        <columns>ParentID__c</columns>
        <columns>ResponseMessage__c</columns>
        <columns>RetryCounter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>2 - In Progress</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_Error</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action__c</columns>
        <columns>ConsolidatedMessageId__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>RecordID__c</columns>
        <columns>OutgoingMessage__c</columns>
        <columns>ParentID__c</columns>
        <columns>ResponseMessage__c</columns>
        <columns>RetryCounter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>3 - Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X4_Duplicate</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ObjectType__c</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action__c</columns>
        <columns>ConsolidatedMessageId__c</columns>
        <columns>Duplicate_ID__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>RecordID__c</columns>
        <columns>OutgoingMessage__c</columns>
        <columns>ParentID__c</columns>
        <columns>ResponseMessage__c</columns>
        <columns>RetryCounter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Duplicate</value>
        </filters>
        <label>4 - Duplicate</label>
    </listViews>
    <nameField>
        <displayFormat>MQ-{0}</displayFormat>
        <label>Message Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>